--- a/static/theme_overide.css
+++ b/static/theme_overide.css
@@ -1,266 +1,5 @@
 /* -- Extra CSS styles for RTD theme ---------- */
 
-/* make the page width fill the window */
-.wy-nav-content {
-    max-width: none;
- }
- 
- /* tweak doc version selection */
- .rst-versions {
-    position: static !important;
- }
- 
- 
- .rst-versions .rst-current-version {
-    padding: 5px;
-    background-color: #2980B9;
-    color: #80FF80;
- }
- 
- .rst-versions .rst-other-versions {
-    padding: 5px;
- }
- 
- div.rst-other-versions dl {
-    margin-bottom: 0;
- }
- 
- 
- /* code block highlight color in rtd changed to lime green, no no no */
- 
- .rst-content tt.literal, .rst-content code.literal, .highlight {
-    background: #f0f0f0;
- }
- .rst-content tt.literal, .rst-content code.literal {
-     color: #000000;
- }
- 
- 
- /* Make the version number more visible */
- .wy-side-nav-search>div.version {
-     color: rgba(255,255,255,1);
- }
- 
- /* squish the space between a paragraph before a list */
- div > p + ul, div > p + ol {
-    margin-top: -20px;
- }
- 
- /* squish space before an hlist in a list */
- li table.hlist {
-    margin-top: -10px;
-    margin-bottom: 5px;
- }
- 
- /* add some space before the figure caption */
- p.caption  {
-     border-top: 1px solid;
-     margin-top: 1em;
- }
- 
- /* decrease line leading a bit, 24px is too wide */
- 
- p {
-    line-height: 22px;
- }
- 
- /* add a colon after the figure/table number (before the caption) */
- span.caption-number::after {
-    content: ": ";
- }
- 
- p.extrafooter {
-    text-align: right;
-    margin-top: -36px;
- }
- 
- table.align-center {
-    display: table !important;
- }
- 
- /* put the table caption at the bottom, as done for figures */
- table {
-    caption-side: bottom;
- }
- 
- .code-block-caption {
-     color: #000;
-     font: italic 85%/1 arial,sans-serif;
-     padding: 1em 0;
-     text-align: center;
- }
- 
- /*  make .. hlist:: tables fill the page */
- table.hlist {
-     width: 95% !important;
-     table-layout: fixed;
- }
- 
- /*  override rtd theme white-space no-wrap in table heading and content  */
- th,td {
-     white-space: normal !important;
- }
- 
- /* dbk tweak for doxygen-generated API headings (for RTD theme) */
- .rst-content dl.group>dt, .rst-content dl.group>dd>p {
-    display:none !important;
- }
- .rst-content dl.group {
-   margin: 0 0 12px 0px;
- }
- .rst-content dl.group>dd {
-   margin-left: 0  !important;
- }
- .rst-content p.breathe-sectiondef-title {
-   text-decoration: underline;  /* dbk for API sub-headings */
-   font-size: 1.25rem;
-   font-weight: bold;
-   margin-bottom: 12px;
- }
- .rst-content div.breathe-sectiondef {
-   padding-left: 0 !important;
- }
- 
- /* doxygenXX item color tweaks, light blue background with dark blue top border */
- .rst-content dl:not(.docutils) dl dt, dl:not(.docutils,.rst-other-versions) dt {
-   background: #e7f2fa !important;
-   border-top: none !important;
-   border-left: none !important;
- }
- 
- 
- /* tweak display of option tables to make first column wider */
- col.option {
-   width: 25%;
- }
- 
- /* tweak format for <kbd> (:kbd:`F10`) */
- kbd
- {
-   -moz-border-radius:3px;
-   -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
-   -webkit-border-radius:3px;
-   -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
-   background-color:#f7f7f7;
-   border:1px solid #ccc;
-   border-radius:3px;
-   box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
-   color:#333;
-   display:inline-block;
-   font-family:Helvetica;
-   font-size:11px;
-   line-height:1.4;
-   margin:0 .1em;
-   padding:.1em .6em;
-   text-shadow:0 1px 0 #fff;
- }
- 
- /* home page grid display */
- 
- .grid {
-     list-style-type: none !important;
-     display: -webkit-box;
-     display: -ms-flexbox;
-     display: flex;
-     -ms-flex-wrap: wrap;
-         flex-wrap: wrap;
-     -webkit-box-pack: center;
-         -ms-flex-pack: center;
-             justify-content: center;
-     margin: 1rem auto;
-     max-width: calc((250px + 2rem) * 4);
- }
- 
- .grid-item {
-     list-style-type: none !important;
-     -webkit-box-flex: 0;
-         -ms-flex: 0 0 auto;
-             flex: 0 0 auto;
-     width: 200px;
-     text-align: center;
-     margin: 1rem;
- }
- 
- .grid-item a {
-     display: block;
-     width: 200px;
-     height: 200px;
-     padding: 20px;
-     display: -webkit-box;
-     display: -ms-flexbox;
-     display: flex;
-     -webkit-box-orient: vertical;
-     -webkit-box-direction: normal;
-         -ms-flex-direction: column;
-             flex-direction: column;
-     -webkit-box-pack: center;
-         -ms-flex-pack: center;
-             justify-content: center;
-     -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
-     border: 1px solid rgb(255, 123, 0);
-     background-color: #ffffff;
-     color: #000000;
- }
- 
- .grid-item h2 {
-     font-size: 1.1rem;
- }
- 
- .grid-item img {
-     margin-bottom: 1.1rem;
-     max-width: 75%;
- }
- 
- .grid-item a:hover {
-         background-color:  #b784a7;
-     color: white;
- }
- 
- 
- .grid-item p {
-     margin-top: 0.5rem;
-     color: #333e48;
- }
- 
- .grid-icon {
-    line-height: 1.8;
-    font-size: 4rem;
-    color:rgb(255, 123, 0);
- }
-
- .rst-columns {
-    column-width: 18em;
- }
- 
- /*
- * This stylesheet is applied after the theme's default one,
- * and thus any overrides or additions can be added here.
- *
- * More info:
- *     http://sphinx-doc.org/extdev/appapi.html?highlight=add_stylesheet#sphinx.application.Sphinx.add_stylesheet
- *     https://github.com/snide/sphinx_rtd_theme/issues/117#issuecomment-41571653
- */
-
-h5 {margin-bottom: 5px}
-
-/* sidebar menu links */
-.wy-menu-vertical li.toctree-l2.current li.toctree-l3 > a:hover {background: #c0c0c0}
-.wy-menu-vertical li.toctree-l3.current li.toctree-l4 > a:hover {background: #b5b5b5}
-.wy-menu-vertical li.toctree-l4 {font-size: 1em}
-.wy-menu-vertical li.current a {border: 0}
-.wy-side-nav-search > a:hover {background: none; opacity: 0.9}
-.wy-side-nav-search > a.icon::before {content: none}
-
-/* kbd role */
-.kbd.docutils.literal {
-	font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
-	font-size: 85%;
-	font-weight: normal;
-	color: #404040;
-}
-
 /* Ensure background of input fields is light color even when a local theme wants it to be dark */
 input[type="text"], input[type="search"], input[type="password"],
 input[type="email"], input[type="url"],
@@ -318,10 +57,6 @@ table {caption-side: bottom}
 	color: #808080;
 }
 
-/* captions top padding */
-.rst-content .figure .caption { margin-top: 4px; }
-.rst-content table.docutils caption { padding: 0.5em; }
-
 /* text word wrap */
 .wy-table-responsive table td,
 .wy-table-responsive table th { white-space: normal; }
@@ -377,12 +112,6 @@ iframe {
 /*copyright font scale down*/
 footer p{ font-size: smaller}
 
-/*download link (zip)*/
-.download span {color: #2980B9; font-weight: normal; cursor: pointer !important}
-.download span:hover {color:#3091d1}
-.download span:visited {color:#9B59B6}
-.download span:first-child::before {color:#4e4a4a}
-
 /* breadcrumbs "Docs" and "View page source" to icons */
 .wy-breadcrumbs {
 	position: relative;
@@ -437,13 +166,6 @@ a[href^="#fig-"]::after {content: "\201d";}
 /*.. container:: lead , block text float around image*/
 .lead {
 	clear: both; width: 100%;
-}
-
-/*mark external links*/
-a.external {color:#656AE0;}
-/*white list blender.org as internal*/
-.external[href^="https://www.blender.org"], .external[href^="https://docs.blender.org"], .external[href^="https://wiki.blender.org"] {
-	color:#2980B9;
 }
 
 /* draws a box around menuselection role */
@@ -716,9 +438,242 @@ a.external {color:#656AE0;}
 .refbox dl dt {font-weight: normal}
 /* end Sphinx 2.0 fixes */
 
-
-
 /* REAL CUSTOM STUFF */
 .wy-side-nav-search > a img.logo { width: 200px; }
 
 
+/* zephyr on Github */
+
+/* make the page width fill the window */
+.wy-nav-content {
+    max-width: none;
+ }
+ 
+ /* tweak doc version selection */
+ .rst-versions {
+    position: static !important;
+ }
+ 
+ 
+ .rst-versions .rst-current-version {
+    padding: 5px;
+    background-color: #2980B9;
+    color: #80FF80;
+ }
+ 
+ .rst-versions .rst-other-versions {
+    padding: 5px;
+ }
+ 
+ div.rst-other-versions dl {
+    margin-bottom: 0;
+ }
+ 
+ 
+ /* code block highlight color in rtd changed to lime green, no no no */
+ 
+ .rst-content tt.literal, .rst-content code.literal, .highlight {
+    background: #f0f0f0;
+ }
+ .rst-content tt.literal, .rst-content code.literal {
+     color: #000000;
+ }
+ 
+ 
+ /* Make the version number more visible */
+ .wy-side-nav-search>div.version {
+     color: rgba(255,255,255,1);
+ }
+ 
+ /* squish the space between a paragraph before a list */
+ div > p + ul, div > p + ol {
+    margin-top: -20px;
+ }
+ 
+ /* squish space before an hlist in a list */
+ li table.hlist {
+    margin-top: -10px;
+    margin-bottom: 5px;
+ }
+ 
+ /* add some space before the figure caption */
+ p.caption  {
+     border-top: 1px solid;
+     margin-top: 1em;
+ }
+ 
+ /* decrease line leading a bit, 24px is too wide */
+ 
+ p {
+    line-height: 22px;
+ }
+ 
+ /* add a colon after the figure/table number (before the caption) */
+ span.caption-number::after {
+    content: ": ";
+ }
+ 
+ p.extrafooter {
+    text-align: right;
+    margin-top: -36px;
+ }
+ 
+ table.align-center {
+    display: table !important;
+ }
+ 
+ /* put the table caption at the bottom, as done for figures */
+ table {
+    caption-side: bottom;
+ }
+ 
+ .code-block-caption {
+     color: #000;
+     font: italic 85%/1 arial,sans-serif;
+     padding: 1em 0;
+     text-align: center;
+ }
+ 
+ /*  make .. hlist:: tables fill the page */
+ table.hlist {
+     width: 95% !important;
+     table-layout: fixed;
+ }
+ 
+ /*  override rtd theme white-space no-wrap in table heading and content  */
+ th,td {
+     white-space: normal !important;
+ }
+ 
+ /* dbk tweak for doxygen-generated API headings (for RTD theme) */
+ .rst-content dl.group>dt, .rst-content dl.group>dd>p {
+    display:none !important;
+ }
+ .rst-content dl.group {
+   margin: 0 0 12px 0px;
+ }
+ .rst-content dl.group>dd {
+   margin-left: 0  !important;
+ }
+ .rst-content p.breathe-sectiondef-title {
+   text-decoration: underline;  /* dbk for API sub-headings */
+   font-size: 1.25rem;
+   font-weight: bold;
+   margin-bottom: 12px;
+ }
+ .rst-content div.breathe-sectiondef {
+   padding-left: 0 !important;
+ }
+ 
+ /* doxygenXX item color tweaks, light blue background with dark blue top border */
+ .rst-content dl:not(.docutils) dl dt, dl:not(.docutils,.rst-other-versions) dt {
+   background: #e7f2fa !important;
+   border-top: none !important;
+   border-left: none !important;
+ }
+ 
+ 
+ /* tweak display of option tables to make first column wider */
+ col.option {
+   width: 25%;
+ }
+ 
+ /* tweak format for <kbd> (:kbd:`F10`) */
+ kbd
+ {
+   -moz-border-radius:3px;
+   -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+   -webkit-border-radius:3px;
+   -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+   background-color:#f7f7f7;
+   border:1px solid #ccc;
+   border-radius:3px;
+   box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+   color:#333;
+   display:inline-block;
+   font-family:Helvetica;
+   font-size:11px;
+   line-height:1.4;
+   margin:0 .1em;
+   padding:.1em .6em;
+   text-shadow:0 1px 0 #fff;
+ }
+ 
+ /* home page grid display */
+ 
+ .grid {
+     list-style-type: none !important;
+     display: -webkit-box;
+     display: -ms-flexbox;
+     display: flex;
+     -ms-flex-wrap: wrap;
+         flex-wrap: wrap;
+     -webkit-box-pack: center;
+         -ms-flex-pack: center;
+             justify-content: center;
+     margin: 1rem auto;
+     max-width: calc((250px + 2rem) * 4);
+ }
+ 
+ .grid-item {
+     list-style-type: none !important;
+     -webkit-box-flex: 0;
+         -ms-flex: 0 0 auto;
+             flex: 0 0 auto;
+     width: 200px;
+     text-align: center;
+     margin: 1rem;
+ }
+ 
+ .grid-item a {
+     display: block;
+     width: 200px;
+     height: 200px;
+     padding: 20px;
+     display: -webkit-box;
+     display: -ms-flexbox;
+     display: flex;
+     -webkit-box-orient: vertical;
+     -webkit-box-direction: normal;
+         -ms-flex-direction: column;
+             flex-direction: column;
+     -webkit-box-pack: center;
+         -ms-flex-pack: center;
+             justify-content: center;
+     -webkit-box-align: center;
+         -ms-flex-align: center;
+             align-items: center;
+     border: 1px solid rgb(255, 123, 0);
+     background-color: #ffffff;
+     color: #000000;
+ }
+ 
+ .grid-item h2 {
+     font-size: 1.1rem;
+ }
+ 
+ .grid-item img {
+     margin-bottom: 1.1rem;
+     max-width: 75%;
+ }
+ 
+ .grid-item a:hover {
+         background-color:  #b784a7;
+     color: white;
+ }
+ 
+ 
+ .grid-item p {
+     margin-top: 0.5rem;
+     color: #333e48;
+ }
+ 
+ .grid-icon {
+    line-height: 1.8;
+    font-size: 4rem;
+    color:rgb(255, 123, 0);
+ }
+
+ .rst-columns {
+    column-width: 18em;
+ }
